<resources>
    <string name="app_name">clientapp</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="choose_game">Choose a Game to Join</string>
    <string name="empty_game_list">There are no games to join</string>
    <string name="create_game">Create Game</string>
    <string name="join_game">Join</string>

    <string name="game_title_prompt">Game Title</string>
    <string name="num_player_prompt">Number of Players</string>
    <string name="choose_color_prompt">Choose your player color</string>
    <string name="color_label">Your Color</string>
    <string name="player_num_label"># Players</string>
    <string name="continue_btn">Continue</string>

    <string name="start_game">Start Game</string>
    <string name="sendChat">Send</string>
    <string name="title_activity_chat_and_history">ChatAndHistoryActivity</string>
    <string name="game_stat">Game Statistics</string>
    <string name="game_history">Game History</string>
    <string name="tab_text_1">Chat</string>
    <string name="tab_text_2">Game History</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_left_drawer">LeftDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_bank">Card Bank</string>

    <string name="title_stat">Stats</string>

    <string name="title_history">History</string>

    <string name="title_chat">Chat</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="hide">Hide</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="routes_list">Claim a Route</string>

    <string name="host">Host</string>

    <string name="turn"> >>> </string>
    <string name="turn_order">Turn Order</string>
    <string name="player">Player</string>
    <string name="points">Points</string>
    <string name="trains">Trains</string>
    <string name="train_cards">Train Cards</string>
    <string name="dest_cards">Destination Cards</string>
    <string name="back_to_lobby">Back to Lobby</string>

</resources>
