<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/hide"
        android:icon="@drawable/ic_arrow_drop_down_black_24dp"
        android:title="@string/hide" />
    <item
        android:id="@+id/game"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Game" />
    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/title_history" />

    <item
        android:id="@+id/stats"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/title_stat" />

    <item
        android:id="@+id/chat"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/title_chat" />
    <!--<item-->
        <!--android:id="@+id/bank"-->
        <!--android:icon="@drawable/ic_account_balance_black_24dp"-->
        <!--android:title="@string/title_bank" />-->



</menu>
