<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLL"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/sepiatrain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AAfff9e8"
        android:orientation="vertical">




    <ImageView
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/username"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/password"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_button"
        android:text="@string/login"
        />

    <Button
        android:id="@+id/register_button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_button"
        android:text="@string/register" />

    </LinearLayout>
</LinearLayout>
