<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLL"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/sepiatrain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AAfff9e8"
        android:orientation="vertical">


        <ImageView
            android:layout_width="1328dp"
            android:layout_height="180dp"
            android:src="@drawable/logo" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/username"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLength="25"
            android:text="q" />

        <EditText
            android:id="@+id/password"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="25" />


        <Button
            android:id="@+id/login_button"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_button"
            android:text="@string/login" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_button"
            android:text="@string/register" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>
