<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
android:layout_width="wrap_content"
android:layout_height="wrap_content"
xmlns:android="http://schemas.android.com/apk/res/android"
android:background="@color/colorAccent">

<TextView
    android:id="@+id/game_title"
    android:layout_width="258dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:textSize="26dp"
    android:text="@string/game_title_prompt"
    android:textColor="@color/black"

    />



<TextView
    android:id="@+id/color_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/game_title"
    android:layout_marginLeft="8dp"
    android:text="@string/color_label"
    android:textSize="18dp"
    />
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/radio_color_group"
    android:layout_width="198dp"
    android:layout_height="31dp"
    android:layout_marginBottom="8dp"
    android:layout_below="@id/game_title"
    android:layout_toRightOf="@id/color_label"
    android:orientation="horizontal"
    >

    <RadioButton
        android:id="@+id/radio_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/green"
        android:onClick="onRadioButtonClicked" />

    <RadioButton
        android:id="@+id/radio_yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/yellow"
        android:onClick="onRadioButtonClicked" />

    <RadioButton
        android:id="@+id/radio_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/red"
        android:onClick="onRadioButtonClicked" />

    <RadioButton
        android:id="@+id/radio_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/blue"
        android:onClick="onRadioButtonClicked" />

    <RadioButton
        android:id="@+id/radio_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onRadioButtonClicked" />
</RadioGroup>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/red"
    android:id="@+id/errorText"
    android:layout_below="@id/radio_color_group"
    android:visibility="gone"/>

<Button
    android:id="@+id/button"
    android:layout_width="309dp"
    android:layout_height="41dp"
    android:layout_below="@id/errorText"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="8dp"
    android:background="@color/colorPrimary"
    android:text="@string/continue_btn"
    android:textColor="@color/colorAccent"
    />

</RelativeLayout>