<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:background="@color/colorAccent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/game_title"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:text="@string/game_title_prompt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/numberPicker"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303" />


    <NumberPicker
        android:id="@+id/numberPicker"
        android:ran
        android:layout_width="45dp"
        android:layout_height="108dp"
        android:layout_gravity="top"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/game_title"
        app:layout_constraintVertical_bias="0.962" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/player_num_label"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/numberPicker"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/game_title"
        app:layout_constraintVertical_bias="0.487" />

    <TextView
        android:id="@+id/color_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="196dp"
        android:text="@string/color_label"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@id/radio_color_group"
        app:layout_constraintTop_toTopOf="@id/textView2"
        app:layout_constraintLeft_toLeftOf="@id/game_title"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="137dp" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radio_color_group"
        android:layout_width="198dp"
        android:layout_height="31dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/numberPicker"
        app:layout_constraintLeft_toLeftOf="@id/game_title"
        app:layout_constraintTop_toBottomOf="@id/color_label"
        app:layout_constraintStart_toStartOf="@+id/game_title">

        <RadioButton
            android:id="@+id/radio_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/green"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/radio_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/yellow"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/radio_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/red"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/radio_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/blue"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/radio_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked" />
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:id="@+id/errorText"
        android:visibility="gone"/>

    <Button
        android:id="@+id/button"
        android:layout_width="309dp"
        android:layout_height="41dp"
        android:layout_marginBottom="72dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/continue_btn"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/game_title"
        app:layout_constraintHorizontal_bias="0.37" />


</android.support.constraint.ConstraintLayout>